e Try treating warnings as errors in our doctest tests

--- a/ApprovalTests_DocTest_Tests/CMakeLists.txt
+++ b/ApprovalTests_DocTest_Tests/CMakeLists.txt
@@ -7,16 +7,16 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-#if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-#    target_compile_options(${PROJECT_NAME} PRIVATE
-#        -Wall
-#        -Wextra
-#        -Wpedantic
-#        -Werror
-#        )
-#elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-#    target_compile_options(${PROJECT_NAME} PRIVATE
-#        /W4
-#        /WX
-#        )
-#endif()
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        -Wall
+        -Wextra
+        -Wpedantic
+        -Werror
+        )
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        /W4
+        /WX
+        )
+endif()
