--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -26,7 +26,8 @@ add_executable(${PROJECT_NAME}
         utilities/MachineBlockerTests.cpp
         reporters/BlockingReporterTests.cpp
         FileUtilsSystemSpecificTests.cpp
-        )
+        Catch2DocumentationSamples.cpp
+    )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 target_compile_definitions(${PROJECT_NAME} PRIVATE CATCH_CONFIG_FAST_COMPILE)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
