t Multiple outputs - doctest
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_DocTest_Tests/CMakeLists.txt
+++ b/ApprovalTests_DocTest_Tests/CMakeLists.txt
@@ -3,7 +3,9 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
         DocTestNamerTests.cpp
-        namers/NamerTests.cpp)
+        DocTestDocumentationSamples.cpp
+        namers/NamerTests.cpp
+    )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
