e doctest header is now in its own sub-directory which creates a cmake target that the doctest test depends upon - see #19

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 project(ApprovalTests.cpp)
 add_subdirectory(ApprovalTests)
 
+set(CMAKE_VERBOSE_MAKEFILE off)
 
 if (NOT_SUBPROJECT)
     # Download and unpack googletest at configure time
@@ -29,6 +30,7 @@ if (NOT_SUBPROJECT)
     include_directories(third_party) # for Catch
 
     enable_testing()
+    add_subdirectory(third_party)
     add_subdirectory(tests)
     add_subdirectory(examples)
 endif()
