--- a/tests/ApprovalTests_DocTest_Tests/CMakeLists.txt
+++ b/tests/ApprovalTests_DocTest_Tests/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(${PROJECT_NAME}
     DocTestDocumentationSamples.cpp
     namers/NamerTests.cpp
     )
-target_link_libraries(${PROJECT_NAME} ApprovalTests)
+target_link_libraries(${PROJECT_NAME} ApprovalTests doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
