e catch.1.9.0.hpp header is now in its own sub-directory which creates a cmake target that the catch1 test depends upon - see #19

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 project(ApprovalTests.cpp)
 add_subdirectory(ApprovalTests)
 
-set(CMAKE_VERBOSE_MAKEFILE off)
+set(CMAKE_VERBOSE_MAKEFILE on)
 
 if (NOT_SUBPROJECT)
     # Download and unpack googletest at configure time
