--- a/tests/ApprovalTests_Catch1_Tests/CMakeLists.txt
+++ b/tests/ApprovalTests_Catch1_Tests/CMakeLists.txt
@@ -3,5 +3,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
     ApprovalsTests.cpp)
-target_link_libraries(${PROJECT_NAME} ApprovalTests)
+target_link_libraries(${PROJECT_NAME} ApprovalTests catch1)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
