t Move writer-related Catch2 tests to sub-directory Issue: #20

--- a/tests/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/tests/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(${PROJECT_NAME}
     NamerTests.cpp
     PairUtilities.h
     StringUtilsTests.cpp
-    StringWriterTests.cpp
+    writers/StringWriterTests.cpp
     StyleGuide.h
     SystemUtilsTests.cpp
     documentation/ToStringExample.cpp
