t Move namer-related Catch2 tests to sub-directory Issue: #20

--- a/tests/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/tests/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(${PROJECT_NAME}
     ApprovalTests.hpp
     CombinationTests.cpp
     FileApproverTests.cpp
-    NamerTests.cpp
+    namers/NamerTests.cpp
     PairUtilities.h
     StringUtilsTests.cpp
     writers/StringWriterTests.cpp
