!!! Remove all the spurious #includes added by CLion refactoring

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -5,5 +5,5 @@ target_include_directories(${PROJECT_NAME}
         INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}/..
         # Temporary extra paths,
-        ${CMAKE_CURRENT_SOURCE_DIR}/
+#        ${CMAKE_CURRENT_SOURCE_DIR}/
         )
