t Remove ApprovalTests_ prefix from test folder names Closes #21

--- a/examples/googletest_existing_main/CMakeLists.txt
+++ b/examples/googletest_existing_main/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(${PROJECT_NAME}
         GoogleTestApprovalsTests.cpp
         )
 target_include_directories(${PROJECT_NAME}
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../tests/ApprovalTests_GoogleTest_Tests)
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../tests/GoogleTest_Tests)
 target_link_libraries(${PROJECT_NAME} ApprovalTests gtest gtest_main)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
