--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(ApprovalTests_Catch1_Tests)
-add_subdirectory(ApprovalTests_Catch2_Tests)
-add_subdirectory(ApprovalTests_GoogleTest_Tests)
-add_subdirectory(ApprovalTests_DocTest_Tests)
+add_subdirectory(Catch1_Tests)
+add_subdirectory(Catch2_Tests)
+add_subdirectory(GoogleTest_Tests)
+add_subdirectory(DocTest_Tests)
