--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -1,14 +1,12 @@
-project(ApprovalTests_GoogleTest_Tests)
-set(CMAKE_CXX_STANDARD 11)
+project(DocTest_Tests)
+set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
-    CompileAllIncludes.cpp
-    GoogleTestApprovalsTests.cpp
-    GoogleNamerTest.cpp
-    GoogleFixtureNamerCustomizationTests.cpp
+    DocTestNamerTests.cpp
+    DocTestDocumentationSamples.cpp
+    namers/NamerTests.cpp
     )
-target_link_libraries(${PROJECT_NAME} ApprovalTests gtest gtest_main)
-
+target_link_libraries(${PROJECT_NAME} ApprovalTests doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
