r Move some test to core/ - see #20

--- a/tests/Catch2_Tests/CMakeLists.txt
+++ b/tests/Catch2_Tests/CMakeLists.txt
@@ -2,11 +2,11 @@ project(Catch2_Tests)
 set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
-    ApprovalExceptionTests.cpp
+    core/ApprovalExceptionTests.cpp
     ApprovalsTests.cpp
     ApprovalTests.hpp
     CombinationTests.cpp
-    FileApproverTests.cpp
+    core/FileApproverTests.cpp
     PairUtilities.h
     StyleGuide.h
     VectorTests.cpp
