d Add documentation for disposable objects
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${PROJECT_NAME}
     namers/DocTestNamerTests.cpp
     documentation/DocTestDocumentationSamples.cpp
     namers/NamerTests.cpp
+    documentation/DisposableSamples.cpp
     )
 target_link_libraries(${PROJECT_NAME} ApprovalTests doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
