--- a/tests/GoogleTest_Tests/CMakeLists.txt
+++ b/tests/GoogleTest_Tests/CMakeLists.txt
@@ -19,6 +19,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
         -Werror
         )
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    string(REGEX REPLACE " /W[0-4]" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
     target_compile_options(${PROJECT_NAME} PRIVATE
         /W4
         /WX
