r Make it easy to keep Troubleshooting uptodate

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(${PROJECT_NAME}
     documentation/DocTestDocumentationSamples.cpp
     namers/NamerTests.cpp
     documentation/DisposableSamples.cpp
+    documentation/ForgottenToConfigure.cpp
     )
 target_link_libraries(${PROJECT_NAME} ApprovalTests doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
