--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -6,10 +6,12 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macOS-latest]
+        os: [windows-latest, windows-2016, ubuntu-latest, macOS-latest]
         include:
         - os: windows-latest
           generator: '"Visual Studio 16 2019"'
+        - os: windows-2016
+          generator: '"Visual Studio 15 2017"' 
         - os: ubuntu-latest
           generator: '"Unix Makefiles"'
         - os: macOS-latest
