e Add option to generate lcov code coverage report for Catch2_Tests.
If this is turned on, by running CMake with -DAPPROVAL_TESTS_ENABLE_CODE_COVERAGE=on
for a Debug build, then a new target Catch2_Tests_coverage is added.

When this new target is built, it builds and runs Catch2_Tests, and then
generates a coverage report file in, for example:
cmake-build-debug/tests/Catch2_Tests/Catch2_Tests_coverage/index.html

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,23 @@ if(NOT DEFINED PROJECT_NAME)
     set(NOT_SUBPROJECT ON)
 endif()
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 project(ApprovalTests.cpp)
 add_subdirectory(ApprovalTests)
 
 set(CMAKE_VERBOSE_MAKEFILE off)
+
+option(APPROVAL_TESTS_ENABLE_CODE_COVERAGE "Enable coverage reporting for selected tests" OFF)
+
+if(APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
+    message(STATUS "Enable Code Coverage")
+    include(CodeCoverage)
+    # Stop Mac from bleating:
+    # clang: : error: : argument unused during compilation: '--coverage' [-Werror,-Wunused-command-line-argument]argument unused during compilation: '--coverage' [-Werror,-Wunused-command-line-argument]
+    string(REPLACE "--coverage" "" COVERAGE_COMPILER_FLAGS ${COVERAGE_COMPILER_FLAGS})
+    append_coverage_compiler_flags()
+endif()
 
 if (NOT_SUBPROJECT)
     # Download and unpack googletest at configure time
