--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(Catch1_Tests)
 add_subdirectory(Catch2_Tests)
 add_subdirectory(GoogleTest_Tests)
 add_subdirectory(DocTest_Tests)
-
+add_subdirectory(UT_Tests)
