Improved check on cmake and fixed some documentation

--- a/tests/UT_Tests/CMakeLists.txt
+++ b/tests/UT_Tests/CMakeLists.txt
@@ -1,8 +1,6 @@
 project(UT_Tests)
-set(CMAKE_CXX_STANDARD 20)
-if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-    MESSAGE("The [Boost].UT integration with Approval Tests requires source_location support by the compiler, therefore it's disabled")
-else()
+if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.2) OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 9.0))
+    set(CMAKE_CXX_STANDARD 20)
     add_executable(${PROJECT_NAME}
         ApprovalTestTests.cpp
         )
@@ -35,4 +33,6 @@ else()
             /WX
             )
     endif()
+else()
+    MESSAGE("The [Boost].UT integration with Approval Tests requires source_location support by the compiler, therefore it's disabled")
 endif()
