B Fix tests in VS2019 with Ninja generator for our builds, and for anyone who uses this project as a sub-repo.
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -3,3 +3,4 @@ set(CMAKE_CXX_STANDARD 11)
 add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME}
         INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
+target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/FC>)
