--- a/examples/catch2_existing_main/CMakeLists.txt
+++ b/examples/catch2_existing_main/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(${PROJECT_NAME}
         main.cpp
         Catch2ApprovalsTests.cpp
         )
-target_link_libraries(${PROJECT_NAME} ApprovalTests catch2)
+target_link_libraries(${PROJECT_NAME} ApprovalTests Catch2::Catch2)
 target_include_directories(${PROJECT_NAME}
         PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../tests/Catch2_Tests)
 
