--- a/tests/Catch2_Tests/CMakeLists.txt
+++ b/tests/Catch2_Tests/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(${PROJECT_NAME}
     utilities/SystemUtilsTests.cpp
     writers/StringWriterTests.cpp
     )
-target_link_libraries(${PROJECT_NAME} ApprovalTests catch2)
+target_link_libraries(${PROJECT_NAME} ApprovalTests Catch2::Catch2)
 target_compile_definitions(${PROJECT_NAME} PRIVATE CATCH_CONFIG_FAST_COMPILE)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
