F Create a namespaced CMake target for ApprovalTests Fixes #75

--- a/tests/GoogleTest_Tests/CMakeLists.txt
+++ b/tests/GoogleTest_Tests/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(${PROJECT_NAME}
     namers/GoogleNamerTest.cpp
     namers/GoogleFixtureNamerCustomizationTests.cpp
     )
-target_link_libraries(${PROJECT_NAME} ApprovalTests gtest gtest_main)
+target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests gtest gtest_main)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
