--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(ApprovalTests CXX)
 set(CMAKE_CXX_STANDARD 11)
 add_library(${PROJECT_NAME} INTERFACE)
+add_library(ApprovalTests::ApprovalTests ALIAS ApprovalTests)
 target_include_directories(${PROJECT_NAME}
         INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/FC>)
