--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -16,21 +16,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        buildtype: [windows-latest, windows-latest-ninja, windows-latest (clangcl), windows-latest (clangcl)-ninja, windows-2016, ubuntu-latest, ubuntu-latest-ninja, macOS-latest, macOS-latest-ninja]
+        buildtype: [windows-latest, windows-latest (clangcl), windows-2016, ubuntu-latest, ubuntu-latest-ninja, macOS-latest, macOS-latest-ninja]
         include:
         - buildtype: windows-latest
           os: windows-latest
           generator: '"Visual Studio 16 2019"'
-        - buildtype: windows-latest-ninja
-          os: windows-latest
-          generator: '"Ninja"'
 
         - buildtype: windows-latest (clangcl)
           os: windows-latest
           generator: '"Visual Studio 16 2019" -T "clangcl"'
-        - buildtype: windows-latest (clangcl)-ninja
-          os: windows-latest
-          generator: '"Ninja" -T "clangcl"'
 
         - buildtype: windows-2016
           os: windows-2016
