--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
 #        disabled Ninja builds, as these fail, as expected:
-#        ubuntu-latest-ninja, ubuntu-latest-ninja
-        buildtype: [windows-latest, windows-latest (clangcl), windows-2016, ubuntu-latest, macOS-latest, macOS-latest-ninja]
+#        ubuntu-latest-ninja, macOS-latest-ninja
+        buildtype: [windows-latest, windows-latest (clangcl), windows-2016, ubuntu-latest, macOS-latest ]
         include:
         - buildtype: windows-latest
           os: windows-latest
