e Try fixing mingw builds https://ci.appveyor.com/project/isidore/approvaltests-cpp/builds/30058619/job/mg3ibclqxw45q59c#L13 CMake Error: CMake was unable to find a build program corresponding to "MinGW Makefiles". CMAKE_MAKE_PROGRAM is not set. You probably need to select a different build tool.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
   matrix:
     - TARGET: vs2019
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      GENERATOR: '"MinGW Makefiles"'
+      GENERATOR: '"MSYS Makefiles"'
 
     - TARGET: vs2017
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
@@ -23,6 +23,7 @@ before_build:
     echo %PATH%
     set PATH=C:\MinGW\bin;%PATH%
     echo %PATH%
+    cmake --help
     cmake -G %GENERATOR% .
 
 build_script:
