--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,9 @@
 environment:
   matrix:
-    - TARGET: vs2017
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      GENERATOR: '"MSYS Makefiles"'
+    - TARGET: mingw
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      GENERATOR: '"MinGW Makefiles"'
+      MINGWPATH: 'C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin'
 
     - TARGET: vs2017
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
@@ -19,9 +20,10 @@ environment:
 before_build:
 - cmd: |
     echo %PATH%
-    set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
+    IF "%MINGWPATH%" == "MinGW Makefiles" set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
     echo %PATH%
-    set PATH=C:\MinGW\bin;%PATH%
+    IF "%MINGWPATH%" == "MinGW Makefiles" dir %MINGWPATH%
+    IF "%MINGWPATH%" == "MinGW Makefiles" set PATH=%MINGWPATH%;%PATH%
     echo %PATH%
     cmake --help
     cmake -G %GENERATOR% .
