--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,7 @@ before_build:
     IF "%MINGWPATH%" == "MinGW Makefiles" set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
     echo %PATH%
     IF "%MINGWPATH%" == "MinGW Makefiles" dir %MINGWPATH%
+    IF "%MINGWPATH%" == "MinGW Makefiles" dir C:/MinGW/bin/
     IF "%MINGWPATH%" == "MinGW Makefiles" set PATH=%MINGWPATH%;%PATH%
     echo %PATH%
     cmake --help
