e Disable Travis and GitHub action CI whilst I try and get mingw/MSYS working

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -1,6 +1,10 @@
 name: build
 
-on: [push, pull_request]
+on:
+  push:
+    - !compile_time_ninja_check_74
+  pull_request:
+    - !compile_time_ninja_check_74
 
 jobs:
   clang-format:
