e Fix GitHub actions branch exclusion

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -2,9 +2,13 @@ name: build
 
 on:
   push:
-    - !compile_time_ninja_check_74
+    branches:
+      - '*'
+      - '!compile_time_ninja_check_74'
   pull_request:
-    - !compile_time_ninja_check_74
+    branches:
+      - '*'
+      - '!compile_time_ninja_check_74'
 
 jobs:
   clang-format:
