e Reinstate a line that I deleted in error in 4486afea0544d4a20b71f1b8d3a6895d50c1118e

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,7 @@ environment:
 
 before_build:
 - cmd: |
+    IF "%TARGET%" == "mingw" set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
     IF "%TARGET%" == "mingw" set PATH=%MINGWPATH%;%PATH%
     IF "%TARGET%" == "cygwin" set PATH=C:\cygwin\bin
     cmake -G %GENERATOR% .
