--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,4 @@
+# Visual Studio builds are run by GitHub actions
 environment:
   matrix:
     - TARGET: cygwin
@@ -9,14 +10,6 @@ environment:
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       GENERATOR: '"MinGW Makefiles" -DCMAKE_IGNORE_PATH="C:/Program Files/Git/usr/bin"'
       MINGWPATH: 'C:\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin'
-
-    - TARGET: vs2017
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      GENERATOR: '"Visual Studio 15 2017"'
-
-    - TARGET: vs2019
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      GENERATOR: '"Visual Studio 16 2019"'
 
 #branches:
 #  except:
