--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -23,7 +23,6 @@ jobs:
   build:
     env:
       BUILD_DIR: ${{ github.workspace }}/buildspace
-      NINJA_BUILD_DIR: ${{ github.workspace }}/../buildspace
     strategy:
       fail-fast: false
       matrix:
@@ -57,7 +56,7 @@ jobs:
           os: ubuntu-latest
           generator: '"Ninja"'
           env:
-            BUILD_DIR: ${{ env.NINJA_BUILD_DIR }}
+            BUILD_DIR: ${{ github.workspace }}/../buildspace
 
         - buildtype:  macOS-latest
           os: macOS-latest
@@ -67,7 +66,7 @@ jobs:
           os: macOS-latest
           generator: '"Ninja"'
           env:
-            BUILD_DIR: ${{ env.NINJA_BUILD_DIR }}
+            BUILD_DIR: ${{ github.workspace }}/../buildspace
 
     runs-on: ${{ matrix.os }}
     steps:
